WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274418
ASSERTION FAILED: isPublicSuffixCF(publicSuffix) in PublicSuffixStore::addPublicSuffix
https://bugs.webkit.org/show_bug.cgi?id=274418
Summary
ASSERTION FAILED: isPublicSuffixCF(publicSuffix) in PublicSuffixStore::addPub...
Sihui Liu
Reported
2024-05-20 14:50:51 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2024-05-20 14:51:26 PDT
rdar://128255984
Sihui Liu
Comment 2
2024-05-20 15:18:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28807
EWS
Comment 3
2024-05-22 09:12:05 PDT
Committed
279128@main
(4031410eeeb1): <
https://commits.webkit.org/279128@main
> Reviewed commits have been landed. Closing PR #28807 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug